--- a/1_PM/about.html
+++ b/1_PM/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Running Man</title>
+    <title>About</title>
     <link rel = "stylesheet" type = "text/css" href = "styles.css" />
 </head>
 
@@ -18,11 +18,9 @@
         <li><a href="episodes.html">Episodes</a></li>
     </ul>
 
-    <div class="center">
-        <h1> My Favorite TV Show: Running Man</h1>
-        <a href="https://en.wikipedia.org/wiki/Running_Man_(TV_series)">
-                <img src="https://s3-ap-southeast-1.amazonaws.com/ams-astro/production/IVPVodImages/IVP(STB_OTT)_1664B_IVP_LAND_672x378_2019126_11242.jpg" alt="Running Man" style="width:60%;height:60%;border:0;">
-        </a>
+    <div>
+        <h1 class="center"> About Running Man</h1>
+        
        
     </div>
    
